--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import "abstracts/mixins";
 @import "abstracts/variables";
 
+
 @import "base/animations";
 @import "base/base";
 @import "base/typography";
@@ -25,3 +26,5 @@
 @import "pages/home";
 
 @import "pages/photos";
+
+@import "pages/newtables";
