--- a/sass/layout/grid.scss
+++ b/sass/layout/grid.scss
@@ -82,15 +82,68 @@
 
 }
 
+.area-map {
+    background-color: red;
+
+    &:hover {
+        border: 1px solid teal;
+    }
+}
+
+.area-map1:hover {
+    border: 5px solid teal;
+}
+
+.covid-online {
+    background-color: #00aced;
+    position: fixed;
+    z-index: 9999;
+    width: 100%;
+    text-align: center;
+
+    //position: relative;
+    //padding: 20px 0;
+    padding: 5px 0;
+    background: #EF4C24;
+    background: teal;
+    font-weight: 500;
+    color: #fff;
+
+    background-color: #008080;
+
+    a:link,
+    a:visited {
+        text-decoration: none;
+        //color: #EF4C24;
+        color: inherit;
+        font-weight: bold;
+        border-bottom: 1px solid transparent;
+
+        transition: all .2s;
+    }
+
+    a:hover,
+    a:active {
+        border-bottom: 1px solid white;
+        color: inherit;
+
+    }
+}
+
 .expand {
 // padding: 30px;
     // background-color: #eee; //nice grey
     background-color: $color-white;
+    //background-color: red;
+
     margin: 0 auto;
     // max-width: 100% !important;
     max-width: $xtreme-gen2-width;
     // width: 100% !important;
+
+    //
     height: 100%;
+
     // max-height: 100%;
     // height: 100vh;
 
