--- a/map.css
+++ b/map.css
@@ -1,28 +1,29 @@
+/*
 #us-map{
   display: block;
-  /*position: absolute;*/
-  /*top: 0;*/
-  /*left: 0;*/
+  !*position: absolute;*!
+  !*top: 0;*!
+  !*left: 0;*!
   width: 100%;
   height: 100%;
 }
 path:hover, circle:hover {
-  /*stroke: #002868 !important;*/
+  !*stroke: #002868 !important;*!
   stroke: teal !important;
   stroke-width:2px;
   stroke-linejoin: round;
-  /*fill: #002868 !important;*/
+  !*fill: #002868 !important;*!
   fill: teal !important;
   cursor: pointer;
 }
 
-/*#HI:hover {
+!*#HI:hover {
   fill: green !important;
 }
 
 #AK:hover {
   fill: green !important;
-}*/
+}*!
 
 
 #path67 {
@@ -37,10 +38,11 @@ path:hover, circle:hover {
   left: 0px;
   z-index: 1;
   background-color: #ffffff;
-  /*border: 2px solid #BF0A30;*/
+  !*border: 2px solid #BF0A30;*!
   border: 3px solid darkorange;
   border-radius: 5px;
   padding: 5px;
   font-family: arial;
   font-size: 20px;
 }
+*/
