--- a/sass/layout/grid.scss
+++ b/sass/layout/grid.scss
@@ -94,6 +94,10 @@
     border: 5px solid teal;
 }
 
+.strong {
+    font-weight: bold;
+}
+
 .covid-online {
     background-color: #00aced;
     position: fixed;
@@ -114,8 +118,8 @@
     a:link,
     a:visited {
         text-decoration: none;
-        //color: #EF4C24;
-        color: inherit;
+        color: #EF4C24;
+        //color: inherit;
         font-weight: bold;
         border-bottom: 1px solid transparent;
 
