--- a/sass/main.css
+++ b/sass/main.css
@@ -1661,6 +1661,10 @@ hr {
   border: 5px solid teal;
 }
 
+.strong {
+  font-weight: bold;
+}
+
 .covid-online {
   background-color: #00aced;
   position: fixed;
@@ -1677,7 +1681,7 @@ hr {
 .covid-online a:link,
 .covid-online a:visited {
   text-decoration: none;
-  color: inherit;
+  color: #EF4C24;
   font-weight: bold;
   border-bottom: 1px solid transparent;
   transition: all 0.2s;
