--- a/sass/abstracts/variables.scss
+++ b/sass/abstracts/variables.scss
@@ -44,3 +44,5 @@ $xtreme-gen2-width: 100%;
 $gutter-vertical: 8rem;
 $gutter-vertical-small: 6rem;
 $gutter-horizontal: 6rem; //space in between columns
+
+$gutter-horizontal-small: 3rem; //space in between columns
