--- a/sass/base/utilities.scss
+++ b/sass/base/utilities.scss
@@ -45,6 +45,9 @@
 .u-margin-right-medium {
     margin-right: 3rem !important;
 }
+.u-margin-right-small {
+    margin-right: 1.5rem !important;
+}
 .u-margin-left-medium {
     margin-left: 3rem !important;
 }
