--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -378,6 +378,7 @@
     // width: 100%;
     position: relative;
 
+
     @include respond(desktop){
       height: 75vh;
     }
@@ -473,17 +474,24 @@
         //                  transparent 80%),
         //                  url(../img/ira2.jpg);
 
+  background-image: linear-gradient(80deg, rgba(255, 255, 255, 0.85) 100%, rgba(255, 255, 255, 0.85) 97%, transparent 80%), url(../img/seashore.jpg);
+  background-size: cover;
+  background-position: center;
+  position: relative;
+
 
       .hero-text-box{
-        position: absolute;
+        //position: absolute;--
+
         // width: 104rem;
         // width: 66%;
         // top: 55%;
         // left: 30%;
         // transform: translate(-50%,-50%);
         // right: 40px;
-        left: 4rem;
-        top: 10rem;
+
+        //left: 4rem;--
+        //top: 10rem;--
 
         // width: 500px;
         // height: 200px;
@@ -522,14 +530,18 @@
          color: #5e6f91;
          color: #04266b;
 
+         font-family: "Cardo", serif;
+
          // color: $color-grey-dark;
-          // color: midnightblue;
+          color: midnightblue;
 
          font-size: 2.6rem;
+         font-size: 3.4rem;
          // font-size: 3.5rem;
-         font-weight: 500;
+         //font-weight: 500;
+         font-weight: bold;
          // text-transform: uppercase;
-         // letter-spacing: 1px;
+          letter-spacing: 1px;
          // word-spacing: 3px;
          margin-bottom: 4.5rem;
 
@@ -571,8 +583,12 @@
 
          .tagline {
            font-weight: 350;
-
            // text-transform: uppercase;
+         }
+
+         .header-spans {
+           font-weight: 400;
+           font-size: 1.8rem;
          }
 
        }
