--- a/sass/abstracts/mixins.scss
+++ b/sass/abstracts/mixins.scss
@@ -131,6 +131,10 @@ ORDER TO DO MEDIA QUERIES: Base + Tyography > General Layout > Grid > Page Layou
         @media (max-width: 87.5em) { @content}; //1400px
     }
 
+  @if $breakpoint == desktop3 {
+        @media (max-width: 93.75em) { @content}; //1500px
+    }
+
     @if $breakpoint == big-desktop {
         @media (min-width: 112.5em) { @content}; //1800px
     }
