--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -371,9 +371,6 @@
 }
 
 .section-content {
-    //height: 95vh;
-   // height: 100vh;
-    // height: 80vh;
     height: 80vh;
     // width: 100%;
     position: relative;
@@ -415,12 +412,12 @@
     // height: 65vh;
     // height: 100vh;
 
-    background-image: linear-gradient(80deg,
+  /*  background-image: linear-gradient(80deg,
                     rgba(255, 255, 255, 0.9) 50%,
                      rgba(255, 255, 255, 0.9) 25%,
                      transparent 120%),
                      url(../img/ira2.jpg);
-  background-position: right;
+  background-position: right;*/
     }
 
     @include respond(small-phone){
@@ -497,19 +494,19 @@
         // height: 200px;
 
         @include respond(tab-port1){
-          left: 2.5rem;
+          //left: 2.5rem;
         }
         @include respond(tab-port){
-          left: 6rem;
-          top: 12rem;
+        /*  left: 6rem;
+          top: 12rem;*/
         }
         @include respond(big-phone1){
-           left: 5rem;
-           top: 10rem;
+          /* left: 5rem;
+           top: 10rem;*/
         }
         @include respond(big-phone){
-           left: 4rem;
-           top: 9rem;
+         /*  left: 4rem;
+           top: 9rem;*/
         }
         @include respond(phone){
            left: 3rem;
@@ -525,9 +522,6 @@
         }
 
        h1 {
-         color: $color-white;
-         color: #5d6e73;
-         color: #5e6f91;
          color: #04266b;
 
          font-family: "Cardo", serif;
@@ -535,7 +529,7 @@
          // color: $color-grey-dark;
           color: midnightblue;
 
-         font-size: 2.6rem;
+         //font-size: 2.6rem;
          font-size: 3.4rem;
          // font-size: 3.5rem;
          //font-weight: 500;
@@ -545,40 +539,100 @@
          // word-spacing: 3px;
          margin-bottom: 4.5rem;
 
+         @include respond(desktop3){
+           font-size: 3.2rem;
+         }
+
          @include respond(desktop2){
-           font-size: 2.3rem;
+           font-size: 3rem;
+         }
+
+         @include respond(desktop1){
+           //font-size: 2.8rem;
          }
 
          @include respond(desktop){
-           font-size: 2.1rem;
+           font-size: 2.8rem;
          }
 
          @include respond(tab-land){
-           font-size: 2rem;
+           font-size: 2.6rem;
          }
          @include respond(tab-port2){
-           font-size: 1.8rem;
+           font-size: 2.4rem;
+         }
+
+         @include respond(tab-port1){
+           font-size: 2.8rem;
          }
 
          @include respond(tab-port){
-            font-size: 2.1rem;
+            //font-size: 2.1rem;
+           padding-top: 2.5rem;
          }
-         @include respond(big-phone){
-            font-size: 1.8rem;
+         @include respond(big-phone1){
+           font-size: 2.4rem;
+         }
+
+         @include respond(phone1){
+            font-size: 2.2rem;
          }
 
          @include respond(phone){
-              font-size: 1.65rem;
+           font-size: 2.4rem;
               margin-bottom: 3rem;
          }
          @include respond(small-phone1){
            // text-align: left;
            // text-transform: uppercase;
-           font-weight: 400;
+
+          /* font-weight: 400;
           font-size: 2.2rem;
-          margin-bottom: 2.5rem;
+          margin-bottom: 2.5rem;*/
+
                  // color: $color-white;
 
+         }
+
+         .sub-heading {
+
+           @include respond(desktop3){
+             font-size: 3rem;
+           }
+
+           @include respond(desktop){
+             font-size: 2.6rem;
+           }
+
+           @include respond(tab-land){
+             font-size: 2.4rem;
+           }
+
+           @include respond(tab-port2){
+             font-size: 2.2rem;
+           }
+
+           @include respond(tab-port1){
+             font-size: 2.6rem;
+           }
+
+           @include respond(big-phone1){
+             font-size: 2.2rem;
+           }
+
+           @include respond(phone1){
+             font-size: 2rem;
+           }
+
+           @include respond(phone){
+             font-size: 2.2rem;
+           }
+
+
+           /*font-size: 3rem;
+           font-weight: 500;
+           font-weight: bold;
+           letter-spacing: normal;*/
          }
 
          .tagline {
