--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -244,6 +244,16 @@ body {
   background-color: #f7f7f7;
   // padding: 8rem 0;
   padding: 3% 7%;
+
+
+  .heading-one {
+    margin-top: 2rem;
+    font-size: 2rem;
+    color: teal;
+    line-height: 1.2;
+
+  }
+
   @include respond(phone1){
   padding-top: 0;
   padding-bottom: 0;
@@ -271,7 +281,11 @@ body {
     // text-align: right;
     // padding-right: 3%;
 
-    text-align: right;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    //text-align: center;
     padding-right: 3%;
     margin-top: 3rem;
 
@@ -291,8 +305,8 @@ body {
     }
 
     .ira-image {
-      // width: 40%;
-      width: 60%;
+      margin-right: 2rem;
+       width: 40%;
       @include respond(tab-land){
       width: 75%;
       }
