--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -381,16 +381,16 @@
     }
 
     @include respond(tab-land){
-      height: 75vh;
+      height: 70vh;
     }
     @include respond(tab-port2){
-      height: 35vh;
+      height: 65vh;
       // height: 75vh;
         // background-position: top;
         // background-size: cover;
     }
     @include respond(tab-port1){
-      height: 50vh;
+      height: 70vh;
     }
     // @include respond(tab-port){
     //   height: 75vh;
@@ -405,7 +405,7 @@
     //   height: 60vh;
     // }
     @include respond(phone){
-      height: 55vh;
+      //height: 55vh;
     }
 
     @include respond(small-phone1){
@@ -421,16 +421,16 @@
     }
 
     @include respond(small-phone){
-    height: 65vh;
+    //height: 65vh;
     }
     @include respond(small-screen){
-    height: 90vh;
+    //height: 90vh;
     }
     @include respond(tiny-screen2){
-    height: 100vh;
+    //height: 100vh;
     }
     @include respond(tiny-screen){
-    height: 120vh;
+    //height: 120vh;
     }
 
     background-image: linear-gradient(80deg,
@@ -509,11 +509,11 @@
            top: 9rem;*/
         }
         @include respond(phone){
-           left: 3rem;
-           top: 9rem;
+          /* left: 3rem;
+           top: 9rem;*/
         }
         @include respond(small-phone1){
-           left: 2rem;
+           //left: 2rem;
            // width: 40rem;
            // position: absolute;;
            // top: 50%;
@@ -596,8 +596,10 @@
 
          .sub-heading {
 
+           font-size: 3rem;
+
            @include respond(desktop3){
-             font-size: 3rem;
+             font-size: 2.8rem;
            }
 
            @include respond(desktop){
