--- a/sass/layout/grid.scss
+++ b/sass/layout/grid.scss
@@ -144,6 +144,18 @@
         font-size: 1.4rem !important;
     }
 
+    @include respond(small-phone1){
+        font-size: 1.2rem !important;
+    }
+
+    @include respond(small-phone){
+        font-size: 1rem !important;
+    }
+
+    @include respond(small-screen){
+        font-size: .9rem !important;
+    }
+
     a:link,
     a:visited {
         text-decoration: none;
@@ -299,6 +311,17 @@
         font-size: 1.6rem;
     }
 
+    @include respond(small-phone){
+        font-size: 1.5rem;
+    }
+    @include respond(small-screen){
+        font-size: 1.4rem;
+    }
+
+    @include respond(tiny-screen){
+        font-size: 1.2rem;
+    }
+
 
     .bullet-1 {
         //background: teal;
@@ -346,6 +369,32 @@
         font-size: 2.2rem;
     }
 
+    @include respond(big-phone1){
+        font-size: 2rem;
+    }
+
+    @include respond(phone1){
+        font-size: 1.7rem;
+    }
+
+    @include respond(phone){
+        font-size: 2rem;
+    }
+
+    @include respond(small-phone1){
+        font-size: 1.8rem;
+    }
+
+    @include respond(small-phone){
+        font-size: 1.6rem;
+    }
+
+    @include respond(tiny-screen){
+        font-size: 1.4rem;
+    }
+
+
+
 
 }
 
@@ -387,14 +436,14 @@
     }
 
     @include respond(tab-port2){
-        text-align: center;
+        //text-align: center;
     }
     @include respond(tab-port){
-        text-align: right;
+        //text-align: right;
     }
 
     @include respond(phone1){
-        text-align: center;
+        //text-align: center;
     }
 
     .ira-image {
@@ -422,3 +471,72 @@
         }
     }
 }
+
+.hero-box-container {
+    position: relative;
+}
+
+.hero-box {
+    width: 100%;
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.blockquote-container {
+
+    height: 100%;
+
+
+    .ira-blockquote {
+
+        vertical-align: middle;
+
+    }
+}
+
+@include respond(flex-desktop){
+    .flex-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+.leaders {
+/*    font-family: "Lato", "Arial", sans-serif;
+    font-weight: 300;
+    text-rendering: optimizeLegibility;
+    font-size: 1.8rem;
+    color: #eee;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    border: 0;*/
+    height: 16rem;
+    height: 20rem;
+    margin-bottom: 4rem;
+    margin-bottom: 2rem;
+    border-radius: 50%;
+}
+
+.leaders-bio {
+
+    text-align: center;
+
+    img {
+
+    }
+
+    h1 {
+
+        margin-bottom: 4rem;
+
+    }
+}
+
+
+
