--- a/sass/pages/home.scss
+++ b/sass/pages/home.scss
@@ -421,7 +421,7 @@
     }
 
     @include respond(small-phone){
-    //height: 65vh;
+    height: 65vh;
     }
     @include respond(small-screen){
     //height: 90vh;
@@ -575,12 +575,31 @@
          }
 
          @include respond(phone1){
-            font-size: 2.2rem;
+            font-size: 2rem;
          }
 
          @include respond(phone){
            font-size: 2.4rem;
-              margin-bottom: 3rem;
+              //margin-bottom: 3rem;
+         }
+
+         @include respond(small-phone1){
+           font-size: 2.2rem;
+              //margin-bottom: 3rem;
+         }
+
+         @include respond(small-phone){
+           font-size: 1.8rem;
+              //margin-bottom: 3rem;
+         }
+
+         @include respond(small-screen){
+           font-size: 1.6rem;
+              //margin-bottom: 3rem;
+         }
+
+         @include respond(tiny-screen){
+           font-size: 1.5rem;
          }
          @include respond(small-phone1){
            // text-align: left;
@@ -623,11 +642,28 @@
            }
 
            @include respond(phone1){
-             font-size: 2rem;
+             font-size: 1.8rem;
            }
+
+
 
            @include respond(phone){
              font-size: 2.2rem;
+           }
+
+           @include respond(small-phone1){
+             font-size: 2rem;
+           }
+           @include respond(small-phone){
+             font-size: 1.7rem;
+           }
+
+           @include respond(small-screen){
+             font-size: 1.5rem;
+           }
+
+           @include respond(tiny-screen){
+             font-size: 1.4rem;
            }
 
 
