Update as of 28 April 2021

--- a/sass/base/utilities.scss
+++ b/sass/base/utilities.scss
@@ -75,6 +75,10 @@
 .u-margin-top-small {
     margin-top: 1.5rem !important;
 }
+
+.u-margin-top-tiny {
+    margin-top: .5rem !important;
+}
 .u-margin-top-small-1 {
     margin-top: 1rem !important;
 }
