--- a/sass/pages/photos.scss
+++ b/sass/pages/photos.scss
@@ -200,3 +200,10 @@
 
 
 #banner-img-121 { background-image: url(../images/pics/architecture-building-countryside-daylight-126271.jpg); } //newsletters
+
+
+//HELP MORE BENEFIT
+#banner-img-122 { background-image: url(../images/pics/green-leafed-tree-besides-body-of-water-during-daytime-158063.jpg); }
+#banner-img-123 { background-image: url(../images/pics/lake.jpg); }
+
+
